--- a/web/index.html
+++ b/web/index.html
@@ -18,10 +18,13 @@
             <a href="#about">About</a>
         </nav>
 
+        <a href="https://github.com/wahchachaps/ExcelTool/releases/download/v1.0.0/CubeFlow-Setup.exe">
+        <button class="h-button">
+        </button>
+
     </div>
     
-    <a href="https://github.com/wahchachaps/ExcelTool/releases/download/v1.0.0/CubeFlow-Setup.exe"><button class="h-button">
-    </button>
+
 
 </div>
 </body>
